--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ button:hover {
     gap: 10px;
 }
 
-.cardA{
+.cardAback{
     background-image: url(img/carta.jpg);
     width: 80px;
     height: 130px;
@@ -92,11 +92,57 @@ button:hover {
     border-radius: 5px;
 }
 
-.cardB{
+.cardBback{
     background-image: url(img/carta.jpg);
     width: 80px;
     height: 130px;
     background-size: 300% 136%;
     background-position: 15% 50%;
     border-radius: 5px;
+}
+
+.card{
+    cursor: pointer;
+    transition: transform 0.4s;
+    position: relative;
+    width: 80px;
+    height: 130px;
+}
+
+.card-front {
+  background-color: #111;
+  color: white;
+  font-size: 2.5rem;
+  font-family: 'Cinzel', serif;
+  border-radius: 8px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backface-visibility: hidden;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
+}
+
+.card-front {
+  transform: rotateY(180deg);
+}
+
+.cardAback,
+.cardBback {
+    transform: rotateY(0deg);
+    backface-visibility: hidden;
+}
+
+.card.flipped .card-inner {
+    transform: rotateY(180deg);
 }
